display basic graph

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>D3 Bar Chart</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./assets/js/d3.v5.min.js"></script>
+
 </head>
 <body>
-    
+
+    <div id="d3-bar-chart">
+        <h1 id="title">United States GDP</div>
+    </div>
+        <script src="./assets/js/script.js"></script>
 </body>
 </html>
