tooltip and css added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>D3 Bar Chart</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/d3.v5.min.js"></script>
-
 </head>
 <body>
-
     <div id="d3-bar-chart">
         <h1 id="title">United States GDP</div>
     </div>
-        <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
